<resources>
    <string name="app_name">Sidur</string>
    <!--        GREETING        -->
    <string name="greeting">Hello</string>

    <string name="greeting_name">Hello </string>
    <string name="profile_photo" translatable="false">profile_photo</string>
    <string name="whats_name"><u>what is your name?</u></string>

    <string name="question">Whatcha wanna do today?</string>

    <!--        ENTER MENU      -->
    <string name="name">Name</string>
    <string name="location">Location access</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="enter">Enter the app</string>
    <!--        MAIN BUTTONS MENU       -->
    <string name="text_prayers">Text of Prayers</string>
    <string name="timetable">Timetable</string>
    <string name="tehilim">Tehilim</string>
    <string name="blessings">Blessings</string>
    <string name="settings">Settings</string>
    <!--        TEXT OF PRAYERS         -->
    <string name="shaharit">Shaharit</string>
    <string name="minha">Minha</string>
    <string name="arvit">Arvit</string>
    <!--        TIMETABLE       -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="shabat">Shabat</string>
    <string name="today">Today</string>
    <string name="next_week">Next Week</string>
    <string name="prev_week">Previous week</string>


    <!--    TEHILIM     -->
    <string name="daily">For today</string>
    <string name="situation">For the situation</string>
    <string name="chapter">All chapters</string>
    <!--    BLESSING        -->
    <string name="food">For food</string>
    <string name="meal">After a meal</string>
    <string name="other">Other</string>


    <string name="home">Home</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_name">Enter your name</string>

    <!--  Notifications  -->
    <string name="enterName">Please, enter a name</string>
    <string name="plsAccessLoc">Please allow location access to enter the app</string>
    <string name="plsAccessNotifications"> Please allow notification access to enter the app</string>
    <string name="accessLocGranted">Location permission granted</string>
    <string name="accessLocDenied">Location permission denied. You cannot proceed without granting location access.</string>
    <string name="accessNotificationGrand">Notification permission denied. You cannot proceed without granting notification access.</string>


    <string name="title_activity_login" translatable="false">Login Activity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--  Settings  -->
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme_settings_description">Choose your theme settings</string>
    <!--    Lang-->
    <string name="language">Language</string>
    <string name="lang_settings_description">Choose your language settings</string>
    <string name="en">English</string>
    <string name="he">Hebrew</string>
    <string name="ru">Russian</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--    Zmanim  -->
        <string name="alot_hashachar">Alot HaShachar (Dawn):</string>
        <string name="netz_hachamah">Netz HaChamah (Sunrise):</string>
        <string name="sof_zman_kriat_shema">Sof Zman Kriat Shema:</string>
        <string name="sof_zman_tefillah">Sof Zman Tefillah:</string>
        <string name="chatzot">Chatzot (Midday):</string>
        <string name="mincha_gedolah">Mincha Gedolah:</string>
        <string name="mincha_ketanah">Mincha Ketanah:</string>
        <string name="plag_hamincha">Plag HaMincha:</string>
        <string name="shkiah">Shkiah (Sunset):</string>
        <string name="tzeit_hakochavim">Tzeit HaKochavim (Nightfall):</string>
    <string name="sunrise">Sunrise</string>
    <string name="noon">Noon</string>
    <string name="sunset">Sunset</string>
    <string name="nisan">Nisan</string>
    <string name="iyar">Iyar</string>
    <string name="sivan">Sivan</string>
    <string name="tamuz">Tamuz</string>
    <string name="av">Av</string>
    <string name="elul">Elul</string>
    <string name="tishrei">Tishrei</string>
    <string name="heshvan">Heshvan</string>
    <string name="kislev">Kislev</string>
    <string name="tevet">Tevet</string>
    <string name="shevat">Shevat</string>
    <string name="adar">Adar 1</string>
    <string name="adar2">Adar 2</string>
    <string name="TorahPortion">Weakly Torah portion is:</string>


</resources>