<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entrance_activity">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/profile_photo"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hi_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/hedding"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/profile_photo"
        app:layout_constraintStart_toStartOf="@id/profile_photo"
        app:layout_constraintTop_toBottomOf="@id/profile_photo" />

    <TextView
        android:id="@+id/greeting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_name"
        android:textColor="@color/second_color"
        android:textSize="19sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/hi_tv"
        app:layout_constraintStart_toStartOf="@+id/hi_tv"
        app:layout_constraintTop_toBottomOf="@+id/hi_tv" />


    <Button
        android:id="@+id/name_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/menu_button"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hi_tv"
         />

    <Button
        android:id="@+id/loc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        style="@style/menu_button"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_btn"
        />

    <Button
        android:id="@+id/gall_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        style="@style/menu_button"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loc_btn"
        />

    <TextView
        android:id="@+id/privacy_policy_tv"
        style="@style/privacy_policy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gall_btn" />

    <Button

        android:id="@+id/enter_btn"
        style="@style/enter_button"
        android:text="@string/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/privacy_policy_tv"
        app:layout_constraintStart_toStartOf="@id/gall_btn"
        app:layout_constraintEnd_toEndOf="@id/gall_btn"

        android:layout_marginTop="50dp"

        />



</androidx.constraintlayout.widget.ConstraintLayout>