<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/profile_photo"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_name"

        style="@style/main_menu_txt"

        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="@id/profile_photo"
        app:layout_constraintStart_toStartOf="@id/profile_photo"
        app:layout_constraintTop_toBottomOf="@id/profile_photo"

        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/greeting"
        android:layout_centerHorizontal="true"
        android:text="@string/question"

        style="@style/main_menu_txt"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="@id/greeting"
        app:layout_constraintStart_toStartOf="@id/greeting"
        app:layout_constraintTop_toBottomOf="@+id/greeting"

        android:layout_marginTop="12dp"/>


    <LinearLayout
        android:id="@+id/layout_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/time_table_btn"
                style="@style/main_menu_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timetable"
                app:cornerRadius="30dp"

                android:drawableBottom="@drawable/clock"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_prayers_btn"
                style="@style/main_menu_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_prayers"
                app:cornerRadius="30dp"
                android:drawableBottom="@drawable/book"

                />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/layout_bot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_top">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/tehelim_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tehilim"
                style="@style/main_menu_btn"
                app:cornerRadius="30dp"
                android:drawableBottom="@drawable/harp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/blessings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blessings"
                style="@style/main_menu_btn"
                app:cornerRadius="30dp"
                android:drawableBottom="@drawable/crown"/>
        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>