<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/hi_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:style="@style/hadding"
        android:text="@string/greeting"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/profile_photo"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@id/profile_photo"
        app:layout_constraintTop_toTopOf="@id/profile_photo"
        app:layout_constraintVertical_bias="0.121" />

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_photo"


        android:src="@drawable/profile_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/greeting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_name"
        android:textColor="#9575CD"

        android:theme="@style/small_hadding"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/hi_tv"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@id/hi_tv"
        app:layout_constraintTop_toTopOf="@id/hi_tv"
        app:layout_constraintVertical_bias="0.075" />

    <Button

        android:id="@+id/name_bt"
        android:layout_width="274dp"
        android:layout_height="72dp"
        android:text="@string/name"



        android:theme="@style/button"

        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="249dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loc_bt"
        android:layout_width="274dp"
        android:layout_height="72dp"
        android:text="@string/location"

        android:theme="@style/button"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name_bt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/name_bt"
        app:layout_constraintTop_toTopOf="@id/name_bt"
        app:layout_constraintVertical_bias="0.168" />

    <Button

        android:id="@+id/gall_bt"
        android:layout_width="274dp"
        android:layout_height="72dp"
        android:text="@string/gallery"

        android:theme="@style/button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loc_bt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/loc_bt"
        app:layout_constraintTop_toTopOf="@id/loc_bt"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/policy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"

        app:layout_constraint="privacy_policy"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gall_bt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/gall_bt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"

        />


</androidx.constraintlayout.widget.ConstraintLayout>