<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/profile_photo"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/book_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_prayers"
        style="@style/main_menu_btn"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginEnd="60dp"
        android:layout_marginBottom="490dp" />

        <Button
        android:id="@+id/clock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timetable"
        style="@style/main_menu_btn"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginStart="60dp"
        android:layout_marginBottom="490dp"/>


    

</androidx.constraintlayout.widget.ConstraintLayout>