<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buttonsFragments.TimetableFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Back button aligned to the left -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            app:tint="@color/second_color" />

        <!-- Home button aligned to the right -->

        <!-- Timetable Title -->
        <TextView
            android:id="@+id/timetable_tv"
            style="@style/main_menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timetable"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            android:layout_marginTop="30dp"/>

        <!-- Week Days Layout -->
        <LinearLayout
            android:id="@+id/week_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/timetable_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp" 
            android:layout_marginEnd="20dp" >

            <!-- Sunday and Monday -->
            <LinearLayout
                android:id="@+id/sun_mon_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sunday_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday"
                    style="@style/timetable_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/monday_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday"
                    style="@style/timetable_btn" />
            </LinearLayout>

            <!-- Tuesday and Wednesday -->
            <LinearLayout
                android:id="@+id/tue_wed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tuesday_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday"
                    style="@style/timetable_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/wednesday_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday"
                    style="@style/timetable_btn" />
            </LinearLayout>

            <!-- Thursday and Friday -->
            <LinearLayout
                android:id="@+id/thu_fri_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/thursday_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thursday"
                    style="@style/timetable_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/friday_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friday"
                    style="@style/timetable_btn" />
            </LinearLayout>
        </LinearLayout>

        <!-- Shabbat Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/shabbat_btn"
            style="@style/timetable_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:text="@string/shabat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/week_layout"
            app:layout_constraintTop_toBottomOf="@id/week_layout" />

        <LinearLayout
            android:id="@+id/week_control_bnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/shabbat_btn"
            app:layout_constraintEnd_toEndOf="@id/shabbat_btn"
            app:layout_constraintTop_toBottomOf="@id/shabbat_btn"
            android:layout_marginTop="20dp">
            <!-- Next Week Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_week_btn"
                style="@style/timetable_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:layout_weight="2"
                android:text="@string/next_week"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prev_week_btn"
                app:layout_constraintTop_toBottomOf="@id/shabbat_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/prev_week_btn"
                style="@style/timetable_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:layout_weight="1"
                android:text="@string/prev_week"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/next_week_btn"
                app:layout_constraintTop_toBottomOf="@id/shabbat_btn" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
